# datatree

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  IDEAS.md  INSTALL.md  LICENSE  NEXT-PATH.md  README.md  ROADMAP.md  SECURITY.md  STATUS.md  TEST_RUN.md  VERIFICATION.md  VERIFIED.md  bench-history.csv  deny.toml  justfile  marketplace.json
.cargo/: config.toml
.github/: FUNDING.yml  pull_request_template.md
benchmarks/: BENCHMARKS.md  Cargo.toml
benchmarks/crg-compare/: run_crg_bench.py
benchmarks/fixtures/: golden.json  integration-django.json  integration-mneme-self.json  integration-typescript.json
benchmarks/results/: 2026-04-23.csv  2026-04-23.json  crg-2026-04-23.csv  crg-2026-04-23.json
benchmarks/src/: lib.rs
brain/: Cargo.toml
brain-stub/: Cargo.toml
brain-stub/src/: main.rs
brain/src/: blast.rs  call_resolver.rs  cluster_runner.rs  concept.rs  concept_store.rs  conventions.rs  embed_store.rs  embeddings.rs  error.rs  federated.rs  identity.rs  job.rs  ledger.rs  leiden.rs  lib.rs  llm.rs  main.rs  reranker.rs  retrieve.rs  smart_questions.rs  summarize.rs  tests.rs  wiki.rs  worker.rs
cli/: Cargo.toml
cli/src/: build_lock.rs  error.rs  hook_payload.rs  hook_writer.rs  ipc.rs  lib.rs  main.rs  markers.rs  receipts.rs  secrets_redact.rs  skill_matcher.rs  tests.rs
cli/src/commands/: abort.rs  audit.rs  blast.rs  build.rs  build_state.rs  cache.rs  call_graph.rs  daemon.rs  doctor.rs  drift.rs  export.rs  federated.rs  find_references.rs  godnodes.rs  graph_diff.rs  graph_export.rs  graphify.rs  history.rs  inject.rs  install.rs  ipc_helpers.rs  log.rs  mod.rs  models.rs  post_tool.rs  pre_tool.rs  pretool_edit_write.rs  pretool_grep_read.rs  rebuild.rs  recall.rs  register_mcp.rs  rollback.rs  self_update.rs  session_end.rs  session_prime.rs  shard_summary.rs  snap.rs  status.rs  step.rs  turn_end.rs  (+5 more)
cli/src/commands/doctor/: daemon_probe.rs  hooks_probe.rs  mcp_probe.rs  mod.rs  models_probe.rs  render.rs  toolchain_probe.rs  update_probe.rs
cli/tests/: abort_test.rs  build_heartbeat_integration.rs  chaos_tests.rs  doctor_paths.rs  e2e_big_repo.rs  hook_no_autospawn.rs  hook_subcommand_parity.rs  hook_writer_e2e.rs  install_writes_standalone_uninstaller.rs  rebuild_integration.rs  uninstall_security_tests.rs  uninstall_status_marker.rs
common/: Cargo.toml
common/src/: build_pipeline.rs  constraint.rs  decision.rs  edge.rs  error.rs  event.rs  finding.rs  ids.rs  ipc_codec.rs  jobs.rs  layer.rs  lib.rs  node.rs  paths.rs  project.rs  query.rs  response.rs  source_files.rs  step.rs  time.rs  worker_ipc.rs
common/tests/: mneme_home_override.rs
docs/: DEBUGGING-PROTOCOL.md  E2E_TEST_v0.2.0.md  INSTALL.md  PLAN-2026-04-29-mneme-final-zip.md  REMAINING_WORK.md  SESSION-2026-04-27-EC2-TEST-LOG.md  architecture.md  dev-setup.md  env-vars.md  faq.md  index.html  mcp-tools.md
docs-book/: README.md  book.toml
livebus/: Cargo.toml
livebus/src/: bus.rs  error.rs  event.rs  health.rs  ipc_input.rs  lib.rs  main.rs  sse.rs  subscriber.rs  tests.rs  ws.rs
mcp/: .gitignore  index.js  package-lock.json  package.json  tsconfig.json
md-ingest/: Cargo.toml
md-ingest/src/: main.rs
mneme-hook/: Cargo.toml
mneme-hook/src/: main.rs
models/: README.md
multimodal-bridge/: Cargo.toml
multimodal-bridge/src/: audio.rs  extractor.rs  image.rs  lib.rs  main.rs  markdown.rs  pdf.rs  registry.rs  types.rs  video.rs  whisper.rs
parsers/: Cargo.toml
parsers/src/: dispatch.rs  error.rs  extractor.rs  incremental.rs  job.rs  language.rs  lib.rs  main.rs  parser_pool.rs  query_cache.rs  resolver.rs  tests.rs  worker.rs
pip/: PUBLISH.md  README.md  pyproject.toml
plugin/: AGENTS.md  CLAUDE.md  GEMINI.md  MNEME-COMMANDS.md  QODER.md  QWEN.md  marketplace.json  plugin.json
release/: bootstrap-install.ps1  install-linux.sh  install-mac.sh  lib-common.sh  model-checksums.json
scanners/: Cargo.toml
scanners/src/: error.rs  findings_writer.rs  job.rs  lib.rs  main.rs  registry.rs  scanner.rs  store_ipc.rs  tests.rs  worker.rs
scanners/src/scanners/: a11y.rs  architecture.rs  drift.rs  ipc.rs  markdown_drift.rs  mod.rs  perf.rs  refactor.rs  secrets.rs  security.rs  theme.rs  types_ts.rs
scripts/: README-INSTALL.md  bump-version.sh  check-counts.sh  check-home-dir-discipline.sh  check-runtime.ps1  check-runtime.sh  gen-release-checksums.ps1  insert_section.py  install-bundle.ps1  install-bundle.sh  install-manifest.example.json  install-runtime.ps1  install-runtime.sh  install-supervisor.ps1  (+18 more)
sdk/js/: Cargo.toml  build.rs  index.d.ts  index.js  package.json
sdk/js/src/: lib.rs
sdk/js/test/: basic.test.ts
sdk/python/: Cargo.toml  build.rs  pyproject.toml
sdk/python/python/mneme_parsers/: __init__.py
sdk/python/src/: lib.rs
sdk/python/tests/: test_basic.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: lib.rs
sdk/rust/tests/: integration.rs
store/: Cargo.toml
store/src/: builder.rs  finder.rs  inject.rs  integrity.rs  ipc.rs  lib.rs  lifecycle.rs  main.rs  query.rs  schema.rs  secrets_redact.rs  test_fs_full.rs
store/tests/: ipc_listener_bind.rs  migrations.rs  secrets_redact_tests.rs
supervisor/: Cargo.toml
supervisor/src/: api_graph.rs  child.rs  config.rs  error.rs  health.rs  ipc.rs  job_queue.rs  job_queue_db.rs  lib.rs  log_ring.rs  main.rs  manager.rs  service.rs  test_hooks.rs  tests.rs  update_check.rs  watchdog.rs  watcher.rs  ws.rs
supervisor/src/api_graph/: graph.rs  health.rs  layout.rs  mod.rs  projects.rs
vision/tauri/: Cargo.toml  tauri.conf.json
vision/tauri/src/: main.rs
workers/multimodal/: pyproject.toml
workers/multimodal/datatree_multimodal/: __init__.py  __main__.py  cache.py  ipc.py  router.py  server.py  types.py
workers/multimodal/datatree_multimodal/extractors/: __init__.py  docx.py  image.py  notebook.py  pdf.py  whisper.py  xlsx.py
workers/multimodal/datatree_multimodal/tests/: __init__.py  test_cache.py  test_image.py  test_pdf.py  test_whisper.py
workers/multimodal/scripts/: install_models.py
(+528 files in other folders)
