[package]
name = "datatree-brain-stub"
version.workspace = true
edition.workspace = true
license = "Proprietary"
description = "v0.1 stub: brain worker placeholder (real impl in v0.2 once ort toolchain compat restored)"

[[bin]]
name = "datatree-brain"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
