[package]
name = "mneme-brain"
version = "0.2.0"
edition = "2021"
description = "Mneme BRAIN — local-only embeddings, Leiden clustering, concept extraction"
license = "Apache-2.0"

[[bin]]
name = "mneme-brain"
path = "src/main.rs"

[lib]
name = "mneme_brain"
path = "src/lib.rs"

[features]
default = []
# Optional local LLM (Phi-3-mini-4k Q4_K_M via llama.cpp).
# Enabling pulls in a native build of llama.cpp; disabled by default to keep
# the workspace buildable in fully offline / no-toolchain environments.
llm = ["dep:llama-cpp-2"]
# Optional BGE reranker (cross-encoder). Disabled by default: enabling
# requires a fastembed build that ships the reranker model surface, which
# is not yet stable across all tier-1 targets. See brain/src/reranker.rs.
reranker = []

[dependencies]
# Workspace sibling — provides shared types (NodeId, EdgeKind, etc.).
# Marked optional via path-only so build can proceed even before `common`
# crate lands; downstream code is gated with `cfg(feature = "with-common")`
# only where strictly necessary. See src/lib.rs for the local fallback.
common = { path = "../common", package = "mneme-common" }

# Async runtime + channel primitives
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "fs",
    "io-util",
    "signal",
] }

# v0.2: real BGE-small-en-v1.5 embeddings via fastembed-rs (ONNX Runtime).
# - Offline-safe after first `mneme models install` (model cached to
#   ~/.mneme/llm/).
# - If the model is missing at runtime, Embedder transparently falls back
#   to the pure-Rust hashing-trick backend so a fresh install still works.
# The `fastembed` crate is behind a feature flag so the rest of the
# workspace continues to build in environments without a C++ toolchain
# (ONNX Runtime needs one). Enabled by default on tier-1 platforms.
fastembed = { version = "4", optional = true, default-features = false, features = [
    "ort-download-binaries",
    "hf-hub-native-tls",
] }

# HuggingFace tokenizers (pure-Rust; no network at load time when given a
# local tokenizer.json path). Used by the fallback hashing-trick backend
# for consistent token-level segmentation.
tokenizers = { version = "0.20", default-features = false, features = [
    "onig",
] }

# Graph + numerics
petgraph = { version = "0.6", features = ["serde-1"] }
ndarray = { version = "0.15", features = ["serde"] }

# Serde + IO
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"

# Error handling + logging
thiserror = "1"
anyhow = "1"
tracing = "0.1"

# Lazy globals + small utils
once_cell = "1"
parking_lot = "0.12"
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
hex = "0.4"
regex = "1"
dashmap = "5"
memmap2 = "0.9"
dirs = "5"

# Step Ledger (F1) — persistent, append-only ledger keyed by ULID-ish ids.
# We use uuid v7 (time-sortable) because the workspace already depends on it.
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { workspace = true }

# Local LLM (feature-gated)
llama-cpp-2 = { version = "0.1.79", optional = true, default-features = false }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }

[package.metadata.docs.rs]
all-features = false
no-default-features = true
