[package]
name = "mneme-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types for the datatree workspace"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
sha2.workspace = true
blake3.workspace = true
uuid.workspace = true
dirs.workspace = true
dunce.workspace = true
tracing.workspace = true
rusqlite.workspace = true
