[package]
name = "mneme-multimodal"
version.workspace = true
edition.workspace = true
license = "Proprietary"
description = "Rust shim that spawns the datatree Python multimodal sidecar and proxies messages"

[[bin]]
name = "mneme-multimodal"
path = "src/main.rs"

[dependencies]
common = { path = "../common", package = "mneme-common" }
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
bytes.workspace = true
dirs.workspace = true
rmp-serde = "1.3"
