[package]
name = "mneme-multimodal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "Pure-Rust multimodal extraction for mneme (PDF / Image / Audio / Video / Markdown). No Python sidecar."

[lib]
name = "mneme_multimodal"
path = "src/lib.rs"

[[bin]]
name = "mneme-multimodal"
path = "src/main.rs"

[features]
# Defaults: PDF + Markdown only — pure Rust, no system libs.
#
# Closes I-20. OCR (image text extraction via libtesseract) is opt-in:
# build with `--features tesseract` if you want it. Tesseract +
# leptonica are NOT bundled because adding them would (a) bloat the
# release tarball with ~50 MB of native deps and (b) force every user
# to install a C++ build toolchain even when they only ever need
# PDF / Markdown extraction. Users who do want OCR install
# `tesseract-ocr` from their system package manager (or
# `winget install UB-Mannheim.TesseractOCR` on Windows) and then
# build mneme with `cargo build --features tesseract`.
#
# Whisper (audio) and ffmpeg (video) follow the same pattern — opt-in,
# system libs assumed, no bundled binaries. See `docs/dev-setup.md`
# for the full build-with-OCR / build-with-Whisper recipes.
default = []

# OCR over images via libtesseract. Requires `tesseract` / `leptonica`
# system packages. When disabled, the ImageExtractor falls back to a
# noop that records dimensions only.
tesseract = ["dep:tesseract"]

# Audio transcription via whisper.cpp bindings. Requires a C++ toolchain
# plus a Whisper GGML model on disk (path set by the caller, or
# auto-resolved from ~/.mneme/models/whisper/).
#
# Pulls in:
#   whisper-rs — Rust FFI bindings to whisper.cpp (statically linked C++)
#   hound      — pure-Rust WAV decoder (no system libs)
#   symphonia  — pure-Rust MP3/M4A/OGG/FLAC/OPUS decoder (no system libs)
#
# Binary size impact: whisper-rs statically links whisper.cpp (~50 MB of
# C++ object code on release + strip). Combined with the workspace binary
# the net increase is ~45-55 MB (strip removes debug symbols). This stays
# below the 100 MB fallback threshold specified in the Wave 3.4 brief.
whisper = ["dep:whisper-rs", "dep:hound", "dep:symphonia"]

# Video frame sampling + audio decoding via ffmpeg. Requires ffmpeg
# system libs (libavformat / libavcodec / libavutil).
ffmpeg = ["dep:ffmpeg-next"]

# Build every optional extractor at once (CI convenience).
# Equivalent to: cargo build -p mneme-multimodal --features all-extractors
all-extractors = ["tesseract", "whisper", "ffmpeg"]

[dependencies]
# Workspace siblings
common = { path = "../common", package = "mneme-common" }

# Core async + error plumbing
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dirs.workspace = true
sha2.workspace = true

# PDF — pure Rust, no system deps.
pdf-extract = "0.7"

# Markdown — pure Rust.
pulldown-cmark = "0.12"

# Image decoding (also used by OCR extractor for pixel handoff).
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
    "gif",
    "bmp",
    "tiff",
] }

# Feature-gated C FFI extractors.
tesseract = { version = "0.15", optional = true }

# whisper-rs: Rust bindings to whisper.cpp (statically linked C++ via cxx-build).
# 0.13 introduced WhisperContextParameters (required for our API surface) and
# updated the whisper.cpp submodule to 1.7.x which includes the multilingual tiny
# model improvements. set_language(None) for auto-detect works from 0.13 onward.
whisper-rs = { version = "0.13", optional = true, default-features = false }

# hound: pure-Rust WAV encoder/decoder. Covers 8/16/24/32-bit PCM and f32 PCM.
hound = { version = "3.5", optional = true }

# symphonia: pure-Rust audio decoder suite. Covers MP3, AAC/M4A, OGG Vorbis,
# FLAC, OPUS. No system libs required. We pull the "default" feature set which
# includes all these codecs.
symphonia = { version = "0.5", optional = true, default-features = true }

ffmpeg-next = { version = "7.0", optional = true }

[dev-dependencies]
tempfile = "3.10"
