[package]
name = "mneme-parsers"
version = "0.2.0"
edition = "2021"
description = "Mneme PARSERS — Tree-sitter worker pool: 25+ languages, incremental, parser-per-worker"
license = "Apache-2.0"
publish = false

[[bin]]
name = "mneme-parsers"
path = "src/main.rs"

[lib]
name = "mneme_parsers"
path = "src/lib.rs"

# ---------------------------------------------------------------------------
# Dependencies
# ---------------------------------------------------------------------------
[dependencies]
# Datatree shared types (Node/Edge/Confidence) — sibling crate.
# Falls back to in-tree definitions when the workspace doesn't yet include it
# (common has not been generated yet — see brain/ for the future location).
common = { path = "../common", package = "mneme-common" }

# Async runtime — multi-threaded with macros for #[tokio::main]
tokio = { version = "1.40", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "signal",
    "io-util",
    "io-std",
    "fs",
] }

# Tree-sitter core — design §21.3 specifies 0.23+ (readme uses 0.24 wording but
# 0.23 is the latest stable interop ABI for the grammar crates listed below).
tree-sitter = "0.23"

# Logging + tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serialization for IPC payloads + diagnostics
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency primitives
parking_lot = "0.12"
once_cell = "1.19"
dashmap = "6.0"

# LRU cache for previous trees (incremental parsing — §21.3.2 anti-pattern fix)
lru = "0.12"

# CPU detection — for `cpu_count * 4` worker math (§21.3)
num_cpus = "1.16"

# Hashing of file content for cache keys (§25.6)
blake3 = "1.5"

# Path utilities
camino = "1.1"

# Time measurement
ahash = "0.8"

# ---------------------------------------------------------------------------
# Tree-sitter language grammars
#
# Tier 1 (always built — datatree core matrix §21.3.1):
#   ts/tsx, js/jsx, python, rust, go, java, c, c++, c#, ruby, php,
#   bash, lua, json, toml, yaml, markdown
#
# Tier 2 (community grammars; opt-in via feature flags):
#   swift, kotlin, scala, vue, svelte, solidity, julia, zig, haskell
# ---------------------------------------------------------------------------

# --- Tier 1 (default) ---
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-lua = { version = "0.2", optional = true }
tree-sitter-json = "0.24"
tree-sitter-toml-ng = { version = "0.7", optional = true }
tree-sitter-yaml = { version = "0.7", optional = true }
tree-sitter-md = { version = "0.3", optional = true }

# --- Tier 2 (community-maintained; opt-in) ---
# Tier-2 grammars are commented out for the v0.1 release because their
# crates.io versions/names are inconsistent across the ecosystem. Re-enable
# individually once a working version is confirmed.
# tree-sitter-swift = { version = "0.7", optional = true }
# tree-sitter-scala = { version = "0.23", optional = true }
# tree-sitter-vue = { version = "0.2", optional = true }
# tree-sitter-julia = { version = "0.23", optional = true }
# tree-sitter-haskell = { version = "0.23", optional = true }

[dev-dependencies]
tokio = { version = "1.40", features = ["test-util", "macros", "rt-multi-thread"] }
pretty_assertions = "1.4"
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }

# ---------------------------------------------------------------------------
# Feature flags
# ---------------------------------------------------------------------------
[features]
default = ["tier1", "markdown", "yaml", "toml", "lua"]

# Tier 1 always present (TS, JS, Py, Rust, Go, Java, C, C++, C#, Ruby, PHP,
# Bash, JSON). Listed for explicitness even though the deps are non-optional.
tier1 = []

# Lightweight document grammars — usually wanted but cheap to drop
markdown = ["dep:tree-sitter-md"]
yaml = ["dep:tree-sitter-yaml"]
toml = ["dep:tree-sitter-toml-ng"]
lua = ["dep:tree-sitter-lua"]

# Heavier / community grammars — disabled in v0.1 (see commented deps above)
# swift = ["dep:tree-sitter-swift"]
# scala = ["dep:tree-sitter-scala"]
# vue = ["dep:tree-sitter-vue"]
# julia = ["dep:tree-sitter-julia"]
# haskell = ["dep:tree-sitter-haskell"]

# Convenience: every supported grammar (Tier-1 + light docs only in v0.1)
full = [
    "markdown", "yaml", "toml", "lua",
]

# Use the workspace `common` crate for shared Node/Edge types instead of the
# local fallback definitions in src/job.rs. Enabled in workspace builds.
shared-types = []

[package.metadata.docs.rs]
all-features = true

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = false
