[package]
name = "mneme-scanners"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Mneme scanner worker pool: applies drift / theme / security / a11y / perf / ipc / markdown / secrets / types rules and writes findings to findings.db via the store IPC."

[[bin]]
name = "mneme-scanners"
path = "src/main.rs"

[lib]
name = "mneme_scanners"
path = "src/lib.rs"

[dependencies]
# Workspace local
common = { path = "../common", package = "mneme-common" }

# Async runtime + concurrency primitives
tokio = { version = "1.40", features = ["full"] }

# Regex engine — all patterns compiled once at startup via once_cell.
regex = "1.10"
once_cell = "1.19"

# Error model + serialization
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optional but conventional in the workspace.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }

# Graph analytics for architecture overview (coupling / betweenness).
petgraph = { version = "0.6", features = ["serde-1"] }

# SQLite (workspace-pinned). Used by `findings_writer` for the direct
# per-shard persist path when scanners run inline (CLI audit, unit tests).
# The background supervisor writes via `store_ipc` instead.
rusqlite = { workspace = true }

# Filesystem walking + gitignore matching for the orchestrator stdin
# mode (`mneme audit` fallback path). Reuses the workspace-pinned
# walkdir version so cargo-deny stays single-version.
walkdir = { workspace = true }
ignore = "0.4"

[features]
default = []
with-common = []

[dev-dependencies]
tokio = { version = "1.40", features = ["full", "test-util", "macros"] }
tempfile = "3.10"
