[package]
name = "mneme-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Database Operations Layer (Builder/Finder/Path/Query/Inject/Lifecycle) for mneme"

[lib]
name = "mneme_store"
path = "src/lib.rs"

[[bin]]
name = "mneme-store"
path = "src/main.rs"

[dependencies]
common = { path = "../common", package = "mneme-common" }
tokio.workspace = true
async-trait.workspace = true
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
sha2.workspace = true
blake3.workspace = true
uuid.workspace = true
dirs.workspace = true
walkdir.workspace = true
interprocess.workspace = true
once_cell.workspace = true
futures.workspace = true
clap.workspace = true

[dev-dependencies]
tempfile = "3.13"
