[package]
name = "mneme-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Mneme master supervisor: spawns and watches all worker child processes."

[[bin]]
name = "mneme-daemon"
path = "src/main.rs"

[lib]
name = "mneme_daemon"
path = "src/lib.rs"

[dependencies]
# Workspace deps (resolved from root Cargo.toml [workspace.dependencies] block)
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

thiserror = "1.0"
anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

chrono = { version = "0.4", features = ["serde"] }

interprocess = { version = "2.2", features = ["tokio"] }
sysinfo = "0.32"
axum = "0.7"
tokio-stream = "0.1"

num_cpus = "1.16"
clap = { version = "4.5", features = ["derive", "env"] }

# Filesystem watching (incremental reindex on save).
notify = "6.1"
walkdir = "2.5"
parking_lot = "0.12"
dunce = "1.0"

# Local workspace members
# `common` crate is referenced via path; Cargo will resolve relative to this Cargo.toml.
common = { path = "../common", package = "mneme-common" }
store = { path = "../store", package = "mneme-store" }
parsers = { path = "../parsers", package = "mneme-parsers" }

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "fs"] }

[features]
default = []
with-common = []

[dev-dependencies]
tokio = { version = "1.40", features = ["full", "test-util", "macros"] }
tempfile = "3.10"
